--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     ></script>
 
     <!-- Load our React component. -->
-    <script type="text/jsx" src="./atm-improvements.jsx"></script>
+    <script type="text/jsx" src="./atm-improvementsSoln.jsx"></script>
   </body>
 </html>
